...
              name="plus"
              size={16}
              color="#FFF"
              style={{ marginRight: 6 }}
            />
            <Text style={{ color: "#FFF", fontWeight: "700", fontSize: 14 }}>
              Report an Issue
            </Text>
          </TouchableOpacity>
        )}
      </View>
    );
  };
...
